# xspec

./: .gitignore  .release-please-manifest.json  .upstream-sha  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  release-please-config.json
.claude-plugin/: marketplace.json
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  question.yml
.github/workflows/: ci.yml  release.yml  security.yml  sync-alert.yml
docs/: SYNCING.md
docs/demo/: README.md  logistics-prompt.txt  warehouse.qnt
plugins/xspec/: CHANGELOG.md
plugins/xspec/.claude-plugin/: plugin.json
plugins/xspec/agents/: analyzer.md  implementer.md  mbt-validator-standalone.md  mbt-validator.md  spec-implementer.md  verifier.md
plugins/xspec/commands/: setup.md  status.md  teardown.md
plugins/xspec/commands/code/: label-transitions.md  orchestrate-migration.md  plan-migration.md  (+1 more)
plugins/xspec/references/: choreo-test-patterns.md  implementation.md  iteration.md  planning.md  quint-constraints.md  runtime-conventions.md  test-debugging.md  verification.md
plugins/xspec/runtime/: Dockerfile  docker-compose.yml
plugins/xspec/schemas/: refactor-plan.json  requirement-analysis.json  verification-report.json
plugins/xspec/scripts/quint_connect/templates/connect/: Cargo.toml
plugins/xspec/scripts/quint_connect/templates/connect/src/: tests.rs
plugins/xspec/scripts/quint_connect/templates/connect/src/tests/: driver.rs  state.rs  transition.rs  types.rs
scripts/: record-demo.sh  trim-cast.sh
tests/fixtures/: bank.qnt
(+21 files in other folders)
